Don't allow Java Parameters to hold things were already adding